--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+Version 0.7: January 21, 2015
+
+Separate the operations for immutable vs. mutable graphs to simplify bindings.
+
 Version 0.6.2: January 21, 2015
 
 Refactoring based on Semmle static analysis
