--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+Version 0.9.0: February 4, 2015
+
+TerminologyKind (definition vs. designation)
+taxonomy matrix of ModelRadaRelationships
+
 Version 0.8.1: February 2, 2015
 
 scalaz-stream dependency
