--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+Version 0.9.1: February 4, 2015
+
+Update versions of dependencies
+Update Eclipse .classpath
+
 Version 0.9.0: February 4, 2015
 
 TerminologyKind (definition vs. designation)
