--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+Version 0.10.3: February 28, 2015
+
+updated apis to support retrieving the graph associated to an entity (concept or relation currently), if any and 
+the entity (concept or relation currently) associated to a graph, if any.
+ 
 Version 0.10.2: February 28, 2015
 
 new apis to save graphs to output streams.
