--- a/notes/9.0.0.markdown
+++ b/notes/9.0.0.markdown
@@ -5,3 +5,5 @@ gov.nasa.jpl.omf.scala.core 9.0.0 is a major update
 - [#9 Update for OML Conversions](https://github.com/JPL-IMCE/gov.nasa.jpl.omf.scala.core/issues/9)
 
 - [#10 Add factory method for ChainRules](https://github.com/JPL-IMCE/gov.nasa.jpl.omf.scala.core/issues/10)
+
+- [#11 Fix RuleBodySegment UUID calculation](https://github.com/JPL-IMCE/gov.nasa.jpl.omf.scala.core/issues/11)
