--- a/notes/9.0.0.markdown
+++ b/notes/9.0.0.markdown
@@ -17,3 +17,5 @@ gov.nasa.jpl.omf.scala.core 9.0.0 is a major update
 - [#15 Missing built-in vocabulary](https://github.com/JPL-IMCE/gov.nasa.jpl.omf.scala.core/issues/15)
 
 - [#16 Incorrect conversion to OML Tables for OML ScalarOneOfLiteralAxioms](https://github.com/JPL-IMCE/gov.nasa.jpl.omf.scala.core/issues/16)
+
+- [#17 Update vocabulary unit tests due to builtin vocabulary behavior changes](https://github.com/JPL-IMCE/gov.nasa.jpl.omf.scala.core/issues/17)
