--- a/notes/9.0.0.markdown
+++ b/notes/9.0.0.markdown
@@ -21,3 +21,5 @@ gov.nasa.jpl.omf.scala.core 9.0.0 is a major update
 - [#17 Update vocabulary unit tests due to builtin vocabulary behavior changes](https://github.com/JPL-IMCE/gov.nasa.jpl.omf.scala.core/issues/17)
 
 - [#19 Missing entityStructuredDataPropertyParticularRestrictionAxioms in Axioms table](https://github.com/JPL-IMCE/gov.nasa.jpl.omf.scala.core/issues/19)
+
+- [#20 Update for the tagged type resolver API](https://github.com/JPL-IMCE/gov.nasa.jpl.omf.scala.core/issues/20)
