--- a/notes/9.0.0.markdown
+++ b/notes/9.0.0.markdown
@@ -23,3 +23,5 @@ gov.nasa.jpl.omf.scala.core 9.0.0 is a major update
 - [#19 Missing entityStructuredDataPropertyParticularRestrictionAxioms in Axioms table](https://github.com/JPL-IMCE/gov.nasa.jpl.omf.scala.core/issues/19)
 
 - [#20 Update for the tagged type resolver API](https://github.com/JPL-IMCE/gov.nasa.jpl.omf.scala.core/issues/20)
+
+- [#21 Update due to OML LogicalElement & ValueCrossReferenceTuple abstractions](https://github.com/JPL-IMCE/gov.nasa.jpl.omf.scala.core/issues/21)
