--- a/notes/9.0.0.markdown
+++ b/notes/9.0.0.markdown
@@ -27,3 +27,5 @@ gov.nasa.jpl.omf.scala.core 9.0.0 is a major update
 - [#21 Update due to OML LogicalElement & ValueCrossReferenceTuple abstractions](https://github.com/JPL-IMCE/gov.nasa.jpl.omf.scala.core/issues/21)
 
 - [#22 Switch from '*.oml.json.zip' to '*.omlzip'](https://github.com/JPL-IMCE/gov.nasa.jpl.omf.scala.core/issues/22)
+
+- [#23 Update unit test w.r.t. IMCE ontology changes.](https://github.com/JPL-IMCE/gov.nasa.jpl.omf.scala.core/issues/23)
